# Runaway

./: .gitignore  CMakeLists.txt  README.md
include/runaway/: utils.hpp
include/runaway/Framework/: GameManager.hpp  ObjectBase.hpp  SpriteManager.hpp  TextBase.hpp  WorldBase.hpp
include/runaway/GameObject/: Background.hpp  Enemies.hpp  GameObject.hpp  Player.hpp  Projectiles.hpp
include/runaway/GameWorld/: GameWorld.hpp
src/: main.cpp
src/Framework/: CMakeLists.txt  GameManager.cpp  ObjectBase.cpp  SpriteManager.cpp  TextBase.cpp  WorldBase.cpp
src/GameObject/: Background.cpp  CMakeLists.txt  Enemies.cpp  GameObject.cpp  Player.cpp  Projectiles.cpp
src/GameWorld/: GameWorld.cpp
